Add MDX detail pages for Threat Log Analyzer, Sentiment Analyzer App, AI Research Assistant

--- a/content/projects.json
+++ b/content/projects.json
@@ -1,60 +1,44 @@
 [
   {
-    "id": "network-security-audit",
-    "title": "Enterprise Network Security Audit",
-    "summary": "Comprehensive security assessment of enterprise network infrastructure identifying vulnerabilities and implementing remediation strategies.",
-    "role": "Lead Cybersecurity Analyst",
-    "dates": "2024-01-15 to 2024-03-30",
+    "id": "threat-log-analyzer",
+    "title": "Threat Log Analyzer (AI-Powered Tagging)",
+    "summary": "Python-based AI tool that parses security logs and classifies incidents by severity and root cause using AI tagging.",
+    "role": "Cybersecurity Engineer",
+    "dates": "2024-07-01 to 2024-09-15",
     "category": "Cybersecurity",
-    "tags": ["Network Security", "Vulnerability Assessment", "Penetration Testing", "Risk Analysis"],
-    "tech": ["Nmap", "Wireshark", "Metasploit", "Nessus", "Python"],
-    "githubUrl": "https://github.com/sirishaganji/network-security-audit",
-    "downloadUrl": "/downloads/network-security-audit.zip",
-    "coverImage": "/images/projects/network-security.png",
-    "detailFile": "network-security-audit.mdx",
+    "tags": ["Log Analysis", "AI", "Incident Classification", "Automation"],
+    "tech": ["Python", "OpenAI", "Pandas", "Regex"],
+    "githubUrl": "https://github.com/SirishaGanji/ai-agent-simulator",
+    "coverImage": "/images/projects/threat-log.png",
+    "detailFile": "threat-log-analyzer.mdx",
     "featured": true
   },
   {
-    "id": "automated-server-deployment",
-    "title": "Automated Server Deployment Pipeline",
-    "summary": "Built automated deployment pipeline for multi-environment server provisioning using Infrastructure as Code principles.",
-    "role": "Senior System Administrator",
-    "dates": "2023-11-01 to 2024-01-10",
-    "category": "SysAdmin",
-    "tags": ["DevOps", "Automation", "Infrastructure", "CI/CD"],
-    "tech": ["Ansible", "Terraform", "Docker", "Jenkins", "AWS"],
-    "githubUrl": "https://github.com/sirishaganji/server-deployment-pipeline",
-    "coverImage": "/images/projects/server-deployment.png",
-    "detailFile": "automated-server-deployment.mdx",
+    "id": "sentiment-analyzer-app",
+    "title": "Sentiment Analyzer App",
+    "summary": "Flask-based web app that analyzes text and CSV uploads using VADER sentiment analysis, generates pie charts, and supports CSV downloads.",
+    "role": "Full Stack Developer",
+    "dates": "2024-06-01 to 2024-07-30",
+    "category": "AI Application",
+    "tags": ["Flask", "Sentiment Analysis", "VADER", "Data Visualization"],
+    "tech": ["Python", "Flask", "VADER", "Matplotlib", "Pandas"],
+    "githubUrl": "https://github.com/SirishaGanji/sentiment-analyzer",
+    "coverImage": "/images/projects/sentiment-analyzer.png",
+    "detailFile": "sentiment-analyzer-app.mdx",
     "featured": true
   },
   {
-    "id": "ai-security-chatbot",
-    "title": "AI-Powered Security Incident Response Bot",
-    "summary": "Developed intelligent chatbot for automated security incident triage and response using advanced prompt engineering techniques.",
-    "role": "Prompt Engineering Specialist",
-    "dates": "2024-04-01 to 2024-06-15",
-    "category": "Prompt Eng",
-    "tags": ["AI", "Chatbot", "Security", "Automation", "NLP"],
-    "tech": ["OpenAI GPT-4", "LangChain", "Python", "FastAPI", "Redis"],
-    "githubUrl": "https://github.com/sirishaganji/ai-security-chatbot",
-    "downloadUrl": "/downloads/ai-security-chatbot.zip",
-    "coverImage": "/images/projects/ai-chatbot.png",
-    "detailFile": "ai-security-chatbot.mdx",
+    "id": "ai-research-assistant",
+    "title": "AI Research Assistant",
+    "summary": "Interactive agent-based AI assistant designed to automate research workflows and synthesize information from multiple sources.",
+    "role": "Prompt Engineer",
+    "dates": "2024-08-01 to 2024-09-30",
+    "category": "AI/Prompt Engineering",
+    "tags": ["AI", "Automation", "Agents", "Prompt Engineering"],
+    "tech": ["Python", "LangChain", "OpenAI", "FastAPI"],
+    "githubUrl": "https://github.com/SirishaGanji/ai-agent-simulator",
+    "coverImage": "/images/projects/ai-research.png",
+    "detailFile": "ai-research-assistant.mdx",
     "featured": true
-  },
-  {
-    "id": "compliance-monitoring-system",
-    "title": "Compliance Monitoring Dashboard",
-    "summary": "Real-time compliance monitoring system for SOC 2 and ISO 27001 requirements with automated reporting.",
-    "role": "Cybersecurity Analyst",
-    "dates": "2023-08-15 to 2023-10-30",
-    "category": "Cybersecurity",
-    "tags": ["Compliance", "Monitoring", "SOC 2", "ISO 27001", "Dashboard"],
-    "tech": ["Python", "Django", "PostgreSQL", "Grafana", "Prometheus"],
-    "githubUrl": "https://github.com/sirishaganji/compliance-monitoring",
-    "coverImage": "/images/projects/compliance-dashboard.png",
-    "detailFile": "compliance-monitoring-system.mdx",
-    "featured": false
   }
 ]
